--- a/GraphQlLibary.Web/appsettings.json
+++ b/GraphQlLibary.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LibaryDbConnection": "Data Source=SQL5045.site4now.net;Initial Catalog=DB_A6420A_DmitroBereg;User Id=DB_A6420A_DmitroBereg_admin;Password=@Gmail12;"
+    "LibaryDbConnection": "Data Source=DESKTOP-KKHGIG8;Initial Catalog=LibaryDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" //"Data Source=SQL5045.site4now.net;Initial Catalog=DB_A6420A_DmitroBereg;User Id=DB_A6420A_DmitroBereg_admin;Password=@Gmail12;"
   },
   "CloudinarySettings": {
     "CloudName": "drfhxc09h",
