--- a/GraphQlLibary.Web/GraphQlLibary.Web.csproj
+++ b/GraphQlLibary.Web/GraphQlLibary.Web.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="GraphQL.Server.Authorization.AspNetCore" Version="3.4.0" />
     <PackageReference Include="GraphQL.Upload.AspNetCore" Version="0.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.5" />
 	  <PackageReference Include="Autofac" Version="5.2.0" />
 	  <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
@@ -40,7 +41,9 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.5" />
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
   <ItemGroup>
